playbook/roles/microk8s/files/files.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: files
  labels:
    name: files
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: files
  namespace: files
spec:
  serviceName: files-service
  replicas: 1
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      namespace: files
      labels:
        app: files
    spec:
      containers:
        - name: files
          image: ghcr.io/radiosilence/jaritanet-files:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              memory: 4Gi
              cpu: "2"
          volumeMounts:
            - name: files-vol-claim
              mountPath: /srv/files
  volumeClaimTemplates:
    - metadata:
        name: files-vol-claim
        namespace: files
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-storage
        selector:
          matchLabels:
            storageName: files
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: files
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: files
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-ingress
  namespace: files
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: files.radiosilence.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: files-service
                port:
                  number: 80
