playbook/roles/microk8s/files/navidrome.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: navidrome
  labels:
    name: navidrome
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  namespace: navidrome
spec:
  serviceName: navidrome-service
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      namespace: navidrome
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 4533
          resources:
            limits:
              memory: 4Gi
              cpu: "4"
          volumeMounts:
            - name: music-vol-claim
              mountPath: /music
            - name: navidrome-vol-claim
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: music-vol-claim
        namespace: navidrome
      spec:
        accessModes: ["ReadOnlyMany"]
        storageClassName: local-storage
        selector:
          matchLabels:
            storageName: music
        resources:
          requests:
            storage: 1Ti
    - metadata:
        name: navidrome-vol-claim
        namespace: navidrome
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-storage
        selector:
          matchLabels:
            storageName: navidrome
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  ports:
    - port: 80
      targetPort: 4533
  selector:
    app: navidrome
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: music.blit.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome-service
                port:
                  number: 80
